1999-01-18  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-view.el (mime-display-text/x-vcard): Deal with bare LF as newline.

1999-01-17  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-play.el, ChangeLog:
	* mime-play.el (mime-view-caesar): Use `enable-character-translation'
	instead of `standard-translation-table-for-decode' to disable
	character translation.

	* semi-def.el, ChangeLog, AKEMI-VERSION: * AKEMI-VERSION: New file.

	* semi-def.el (mime-user-interface-product): Bump up to
	AKEMI 1.12.1.

	* AKEMI-VERSION: New file.

	* mime-play.el, ChangeLog: * mime-play.el: Reuiqre `ccl'.
	(translate-string): New CCL program.
	(mime-view-caesar): Try to deal with
	`standard-translation-table-for-decode'.

	* mime-view.el, ChangeLog: Sync up with semi-vcard.

1999-01-17  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-play.el (mime-view-caesar): Use `enable-character-translation'
	instead of `standard-translation-table-for-decode' to disable 
	character translation.

1999-01-17  Tanaka Akira  <akr@jaist.ac.jp>

	* AKEMI-VERSION: New file.

	* semi-def.el (mime-user-interface-product): Bump up to
	AKEMI 1.12.1.

1999-01-17  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-play.el: Reuiqre `ccl'.
	(translate-string): New CCL program.
	(mime-view-caesar): Try to deal with
	`standard-translation-table-for-decode'.

1998-11-12  Tanaka Akira  <akr@jaist.ac.jp>

        * mime-view.el (mime-display-text/x-vcard): Fix multibyteness
	problem.

1998-11-07  Tanaka Akira  <akr@jaist.ac.jp>

        * mime-view.el (mime-display-text/x-vcard): Preserve encoding.

1998-11-07  Tanaka Akira  <akr@jaist.ac.jp>

        * mime-view.el (mime-display-text/x-vcard): New function.
        (mime-preview-condition): Set up for 'mime-preview-text/x-vcard.

1999-01-15  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-view.el: Must require `emu'.

1999-01-04  OKUNISHI Fujikazu <fuji0924@mbox.kyoto-inet.or.jp>

	* mime-view.el (mime-view-insert-entity-button): Use URL if it
	exists in Content-Type field.
